# Data_WarehouseAPI

./: .gitignore  README.md  pyproject.toml
data_warehouseapi/: app.py
etl/: extract.py
to_do/: to_do_list.md
