[tool.poetry]
name = "data-warehouseapi"
version = "0.1.0"
description = ""
authors = ["romilsonlonan <romilsonlonan@gmail.com>"]
readme = "README.md"
packages = [{include = "data_warehouseapi"}]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"

# Configurações extras
uvicorn = "^0.30.1"
loguru = "^0.7.2"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.9"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations', 'to-do','pytest', 'test']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

# Comando pra criar um aliás:
[tool.taskipy.tasks]
run = 'fastapi dev data_warehouseapi/app.py'
pre_test = 'task lint'
test = 'pytest --cov=data_warehouseapi -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
